# insa-rennes-3eii-vex

./: ProjectHome.md  build.sh  configure.ac
Code Source Robot/Source/: orders.c
Header/: delays.h
Robot/Header/: communication.h  ifi_picdefs.h  ifi_utilities.h  orders.h  turret.h
Robot/Source/: main.c  orders.c  sonar.c  turret.c  user_routines.c  user_routines_fast.c
Source/: ifi_startup.c
data/: Makefile  Makefile.in
debian/: changelog  control  emacsen-remove.ex  emacsen-startup.ex  manpage.1.ex  manpage.xml.ex  menu.ex  postrm.ex  preinst.ex  rules  vex.doc-base.EX  vex.substvars  watch.ex
debian/vex/DEBIAN/: md5sums
debian/vex/usr/share/dbus-1/services/: org.maemo.vex.service
src/: Makefile.am  appdata.h  communication.h
src/bt/: bluetooth.c  bluetooth.h  btthread.c
src/ui/: callbacks.c  callbacks.h  interface.c  interface.h  uithread.c  uithread.h
trunk/: autogen.sh  configure.ac
trunk/Code Source Robot/Source/: ifi_utilities.c
trunk/Header/: user_routines.h
trunk/Robot/: Projet Robot.mcp  Projet Robot.mcw
trunk/Robot/Header/: communication.h  ifi_aliases.h  ifi_default.h  orders.h  serial_ports.h  sonar.h  turret.h
trunk/Robot/Source/: orders.c  serial_ports.c  sonar.c  turret.c  user_routines.c  user_routines_fast.c
trunk/Source/: user_routines_fast.c
trunk/data/: Makefile  Makefile.am  Makefile.in  vex.desktop
trunk/debian/: README.Debian  control  cron.d.ex  emacsen-install.ex  files  init.d.ex  manpage.sgml.ex  postinst.ex  prerm.ex  vex-default.ex  vex.substvars
trunk/debian/vex/DEBIAN/: control
trunk/debian/vex/usr/share/doc/vex/: copyright
trunk/src/: Makefile.am  appdata.h  communication.h  main.c  makefile.old
trunk/src/bt/: bluetooth.c  btthread.c  btthread.h
trunk/src/ui/: callbacks.c  interface.c
