#
# This file is part of vex
#


serviceentry_DATA = org.maemo.vex.service

desktopentry_DATA = vex.desktop

icon_26x26_DATA = icons/26x26/vex.png
icon_40x40_DATA = icons/40x40/vex.png
icon_scalable_DATA = icons/scalable/vex.png

EXTRA_DIST = $(serviceentry_DATA) $(desktopentry_DATA) $(icon_26x26_DATA) $(icon_40x40_DATA) $(icon_scalable_DATA)
